# cmmcore

./: .gitignore  Makefile  README.md  emscripten-cross.txt  meson.build  вкфаеюьв
cmmcore/: aabb.h  binom.h  boundary_intersection.h  bvh.hpp  bvh.pxd  ccx.h  ccx.pxd  closest_point.h  cm_hash.h  cm_limits.h  cmmcore.h  convexhull.h  csx.h  gauss_map.h  gjk.h  gjk2.h  integrate.h  kdtree.h  limits.h  lp.h  matrix.h  matrix.pxd  memoryview.h  memutils.h  minimize_scalar.h  monomial.h  monomial.pxd  newthon.h  newthon2.h  numeric_utils.h  nurbs.h  nurbs.pxd  nurbs_utils.h  plane.h  point_inversion.h  polygon.h  polyline.h  polyline.pxd  quickhull.hpp  quickhull.pxd  (+7 more)
cmmcore/_convexhull/: convexhull2d.h  quickhull.hpp
docs/: book.toml
docs/src/: SUMMARY.md  cython-ext.md  wasm-library.md
examples/cython_extension/: README.md  build.sh  ccx.pyx  main.py  requirenments.txt  setup.py
examples/wasm/: Makefile  README.md  cmmcore_wasm.cpp  index.html  start.sh
test/: Makefile  boundary_intersection_test.cpp  chull2d_test.cpp  csx_test.cpp  curve_derivative_test.cpp  cxx_test.cpp  evaluate_nurbs_test.cpp  find_span_test.cpp  gauss_map_test.cpp  integrate_test.cpp  kdtree_test.cpp  knots_test.cpp  lph_test.cpp  memview_test.cpp  meson.build  minimize_scalar_test.cpp  monomial_test.cpp  newthon2_test.cpp  newthon_test.cpp  polygon_test.cpp  spatial_separability_test.cpp  spherical_separability_test.cpp  ssx_test.cpp  ssx_test_2.cpp  step_test.cpp  surface_derivative_test.cpp
wasm/: Makefile  README.md  index.html
